further work to fix layout issues, added display type to most css classes

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,11 @@
 
 body {
   background-color: #6ba4b8;
+  align-content: center;
+  align-items: center;
+  margin-right: auto;
+  margin-left: auto;
+  /*max-width: 800px;*/
 }
 
 .container {
@@ -23,14 +28,17 @@ body {
   width:  100%;
   height: 100%;
   text-align: center;
+  align-content: center;
   grid-column-gap: 0%;
 }
 
 .person_block {
   background-color: steelblue;
   text-align: center;
+  padding: 10px;
   display: inline-block;
 }
+
 .person_block_caption {
   background-color: rgb(43, 0, 100);
   color: #FFFFFF;
@@ -40,43 +48,50 @@ body {
 .header_block {
   grid-area: header_block;
   background-color: #9955FF;
+  display: block;
 }
 
 .left_pad {
   grid-area: left_pad;
   background-color: #FFFFFF;
+  display: block;
 }
 
 .left_block {
   grid-area: left_block;
   background-color: #DD5555;
+  align-content: center;
+  display: block;
 }
 
 .center_block {
   grid-area: center_block;
   background-color: #FF990F;
+  text-align: center;
+  align-content: center;
+  display: block;
+
 }
 
 .right_block {
   grid-area: right_block;
   background-color: #33F411;
+  align-content: center;
+  display: block;
 }
 
 .right_pad {
   grid-area: right_pad;
-  display: block;
   background-color: #FFFFFF;
+  display: block;
 }
 
 .footer_block {
   grid-area: footer_block;
-  display: block;
   background-color: #222244;
+  display: block;
 }
 
-.person_block {
-  padding: 10px;
-}
 
 @media screen and (min-width: 1601px) {
   .container{
